[package]
name = "expense-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = { version = "0.16.0", features = ["derive"] }
salvo = { version = "0.37.4", features = ["affix"] }
mongodb = "2.3.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
thiserror = "1.0.37"
dotenv = "0.15.0"
fancy-regex = "0.10.0"
